Fix spacing for cost

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -33,6 +33,7 @@ button {
 form {
   background-color: lightblue;
   padding: 1em;
+  margin-bottom: 1em;
   input {
     margin-bottom: 1em;
   }
